syntax = "proto3";

package v1;

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/wrappers.proto";
import "protoc-gen-gotag/tagger/tagger.proto";

message Empty {};

enum TYPE{
	BOOLEAN=0;
	DOUBLE=1;
	INT32=2;
	INT64=3;
	STRING=4;
	TIMESTAMP=5;
}

enum INDEX_ORDER{
	ASCENDING=0;
	DESCENDING=1;
}

service MongoOPService {
	rpc TestWorld(TestWorldRequest) returns (TestWorldResponse) {}
	rpc CreateCollection(CreateCollectionRequest)
	    returns (CreateCollectionResponse) {}
	rpc ListCollections(Empty) returns (ListCollectionsResponse) {}
}

message TestWorldRequest{
	string msg=1; 
}

message TestWorldResponse{
	string msg=1;
}

message FieldValue {
	TYPE valueType=1;
	string fieldName=2;
	bool isUnique=3;
	bool isIndexed=4;
}

message ListCollectionsResponse{
	repeated Collection collections =1;
}

message Collection {
	string id=1;
	string name=2;
	bool status=3;
	string host=4;
	repeated FieldValue FieldValues=5;
}

message CreateCollectionRequest {
	Collection collection =1;
}
message CreateCollectionResponse {
	Collection collection =1;
}